fix: Reversed order of `RowBlockColumn`s on narrow screens + padding

--- a/modules/hanna-css/src/css/RowBlock.scss
+++ b/modules/hanna-css/src/css/RowBlock.scss
@@ -9,7 +9,7 @@
   .RowBlock {
     margin-bottom: $var--component-vspace--large;
     display: flex;
-    flex-flow: column-reverse;
+    flex-flow: column;
     justify-content: space-between;
     align-items: center;
     @include SeenEffect--fadeup('> .RowBlockColumn');
